<resources>
    <string name="app_name">TrainSpace</string>
    <string name="dep_time">Departure Time</string>
    <string name="all_upcoming_trains">All upcoming trains</string>
    <string name="find_a_train">Find a train</string>
    <string name="add_trip_details_to_show_the_trains_available_for_you">Add trip details to show the trains available for you.</string>
    <string name="departure_time">Departure Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="status">Status</string>
    <string name="train_line">Train Line</string>
    <string name="capacity">% Capacity</string>
    <string name="arrow">Arrow</string>
    <string name="find_you_a_train_car">Finding you a train car…</string>
    <string name="we_re_finding_you_the_least_crowded_car_to_keep_you_safe">We\'re finding you the least crowded car to keep you safe.</string>
    <string name="platform">platform</string>
    <string name="wait_for_your_car">Wait for your car</string>
    <string name="wait_car_instructions">Be in line for Car 7704 when it arrives. Stand at least 6 feet from other bystanders.</string>
    <string name="railway_tracks">Railway tracks</string>
    <string name="drag_handle">drag_handle</string>
    <string name="train_figure">Train Figure</string>
    <string name="enter_exit_point">Enter/exit point</string>
    <string name="your_location">Your Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_location">FROM_LOCATION</string>
    <string name="to_location">TO_LOCATION</string>
    <string name="via_train_line">VIA_TRAIN_LINE</string>
    <string name="capacitor_indicator_circle">Capacitor Indicator Circle</string>
    <string name="ticket">Ticket</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="confirm">Confirm</string>
    <string name="check_the_number">Check the number to make sure you\'re boarding the right car.</string>
    <string name="your_train_is_nearby">Your train is nearby</string>
    <string name="correct_car">Correct car</string>
    <string name="car_7704">CAR 7704</string>
    <string name="car_1">CAR 1</string>
    <string name="car_2">CAR 2</string>
</resources>