<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1EAC0">

        <ImageView
            android:id="@+id/tracks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="190dp"
            android:contentDescription="@string/railway_tracks"
            app:srcCompat="@drawable/tracks" />

        <RelativeLayout
            android:id="@+id/train_and_annotation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:translationY="600dp">

            <ImageView
                android:id="@+id/text_annotations_temp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:contentDescription="@string/railway_tracks"
                app:srcCompat="@drawable/text_annotations_temp" />

            <TextView
                android:id="@+id/car_annotation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="104dp"
                android:layout_marginTop="216dp"
                android:contentDescription="@string/correct_car"
                android:text="@string/car_7704"
                android:textColor="#007aff"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/train"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/train"
                android:layout_marginStart="186.5dp"
                android:layout_marginLeft="186.5dp"
                android:contentDescription="@string/train_figure" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/platform"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/platform"
            app:srcCompat="@drawable/platform"
            android:layout_marginStart="220dp"
            android:layout_marginLeft="220dp"/>
        <ImageView
            android:id="@+id/transit_enter_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enter_exit_point"
            app:srcCompat="@drawable/baseline_transit_enterexit_black_18dp"
            android:layout_marginStart="225dp"
            android:layout_marginLeft="225dp"
            android:layout_marginTop = "235dp"/>
        <ImageView
            android:id="@+id/location_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/your_location"
            app:srcCompat="@drawable/location_dot"
            android:layout_marginStart="260dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop = "300dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/standardBottomSheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="0dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="172dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/drag_handle"
            app:srcCompat="@drawable/baseline_drag_handle_black_18dp" />

        <TextView
            android:id="@+id/wait_for_your_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/wait_for_your_car"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/wait_car_instructions"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/wait_car_instructions" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="30dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
>

            <LinearLayout
                android:id="@+id/from_to_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginVertical="32dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_location"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#EE352E"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="8dp"
                    android:textColor="#ffffff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_location"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#EE352E"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="8dp"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <TextView
                android:id="@+id/train_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_train_line"
                app:layout_constraintTop_toBottomOf="@id/from_to_locations"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:textSize="12sp"/>

            <LinearLayout
                android:id="@+id/dep_arrival_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/train_line"
                android:layout_marginTop="32dp">

                <TextView
                    android:id="@+id/departure_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_time"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/arrow"
                    app:srcCompat="@drawable/baseline_east_black_18dp">
                </ImageView>

                <TextView
                    android:id="@+id/arrival_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_time"
                    android:textColor="#000000"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dep_arrival_times"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/status"
                android:layout_marginTop="8dp"
                />

            <LinearLayout
                android:id="@+id/capacity_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/dep_arrival_times">

                <ImageView
                    android:id="@+id/capacity_indicator_circle"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/green_circle"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/capacitor_indicator_circle" />

                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capacity"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/ticketButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/baseline_receipt_black_18dp"
                android:text="@string/ticket"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/baseline_share_black_18dp"
                android:text="@string/share"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/reportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/baseline_report_problem_black_18dp"
                android:text="@string/report"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>