<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f3f3">

    <ImageView
        android:id="@+id/car_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/railway_tracks"
        app:srcCompat="@drawable/car_view"
        android:translationX="0dp"/>

    <RelativeLayout
        android:id="@+id/number_arrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/car_number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="222dp"
            android:text="@string/car_1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="#000000"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/baseline_south_black_18dp"
            />

        <TextView
            android:id="@+id/car_number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="310dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="222dp"
            android:text="@string/car_2"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="#000000"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/baseline_south_black_18dp"
            />

    </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/standardBottomSheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="64dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="256dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/drag_handle"
            app:srcCompat="@drawable/baseline_drag_handle_black_18dp" />

        <TextView
            android:id="@+id/train_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/your_train_is_nearby"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/wait_car_instructions"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/check_the_number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:background="#007AFF"
            android:layout_marginTop="34dp"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>