<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:id="@+id/dep_arrival_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/list_item_departure_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_time"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/arrow"
                    app:srcCompat="@drawable/baseline_east_black_18dp">
                </ImageView>

                <TextView
                    android:id="@+id/list_item_arrival_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_time"
                    android:textColor="#000000"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/list_item_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dep_arrival_times"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/status"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/list_item_train_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_line"
                android:background="#EE352E"
                android:paddingVertical="4dp"
                android:paddingHorizontal="8dp"
                android:textColor="#ffffff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="12sp"/>

            <LinearLayout
                android:id="@+id/capacity_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/list_item_train_line">

                <ImageView
                    android:id="@+id/capacity_indicator_circle"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/green_circle"
                    />

                <TextView
                    android:id="@+id/list_item_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capacity"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>