<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/findTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="16dp"
            android:text="@string/find_a_train"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fromTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/from">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fromEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/toTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/to">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/toEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/dep_time"
            android:singleLine="true"
            android:imeOptions="actionDone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f3f3f3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upcomingTrains"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_upcoming_trains"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>

        <ListView
            android:id="@+id/scheduleListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="12dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:clipToPadding="false"/>

        <LinearLayout
            android:id="@+id/noTrainsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tripDetails"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp"
                android:drawableTop="@drawable/directions_railway_24px"
                android:gravity="center_horizontal"
                android:text="@string/add_trip_details_to_show_the_trains_available_for_you"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
